new proj/src/objects/GE_ES_Links__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Description__c</fullName>
        <label>Link Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_ES_Location__c</fullName>
        <description>Used to explain where this link should reside. Options include; opportunity, risk factor, and general content (GE_ES_Links__c)</description>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_P_L__c</fullName>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_R_Stage__c</fullName>
        <label>R Stage</label>
        <picklist>
            <picklistValues>
                <fullName>R0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Tool__c</fullName>
        <label>Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Step__c</fullName>
        <label>Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Usr_prfl__c</fullName>
        <label>TM User profile</label>
        <picklist>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ComOps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Links</relationshipLabel>
        <relationshipName>Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Links</label>
    <listViews>
        <fullName>All</fullName>
        <columns>GE_ES_Tool__c</columns>
        <columns>GE_ES_Description__c</columns>
        <columns>GE_ES_Link__c</columns>
        <columns>GE_ES_P_L__c</columns>
        <columns>GE_ES_R_Stage__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CS_Links</fullName>
        <columns>GE_ES_Tool__c</columns>
        <columns>GE_ES_Link__c</columns>
        <columns>GE_ES_Description__c</columns>
        <columns>GE_ES_P_L__c</columns>
        <columns>GE_ES_R_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_ES_P_L__c</field>
            <operation>includes</operation>
            <value>CS</value>
        </filters>
        <label>CS Links</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Common</fullName>
        <columns>GE_ES_Tool__c</columns>
        <columns>GE_ES_Link__c</columns>
        <columns>GE_ES_Description__c</columns>
        <columns>GE_ES_P_L__c</columns>
        <columns>GE_ES_R_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_ES_P_L__c</field>
            <operation>equals</operation>
            <value>Common</value>
        </filters>
        <label>Common</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DE_Links</fullName>
        <columns>GE_ES_Tool__c</columns>
        <columns>GE_ES_Link__c</columns>
        <columns>GE_ES_Description__c</columns>
        <columns>GE_ES_P_L__c</columns>
        <columns>GE_ES_R_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_ES_P_L__c</field>
            <operation>includes</operation>
            <value>DE</value>
        </filters>
        <label>DE Links</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EE_Links</fullName>
        <columns>GE_ES_Tool__c</columns>
        <columns>GE_ES_Link__c</columns>
        <columns>GE_ES_Description__c</columns>
        <columns>GE_ES_P_L__c</columns>
        <columns>GE_ES_R_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_ES_P_L__c</field>
            <operation>includes</operation>
            <value>EE</value>
        </filters>
        <label>EE Links</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IS_Links</fullName>
        <columns>GE_ES_Tool__c</columns>
        <columns>GE_ES_Link__c</columns>
        <columns>GE_ES_Description__c</columns>
        <columns>GE_ES_P_L__c</columns>
        <columns>GE_ES_R_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_ES_P_L__c</field>
            <operation>includes</operation>
            <value>IS</value>
        </filters>
        <label>IS Links</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MCS_Links</fullName>
        <columns>GE_ES_Tool__c</columns>
        <columns>GE_ES_Link__c</columns>
        <columns>GE_ES_Description__c</columns>
        <columns>GE_ES_P_L__c</columns>
        <columns>GE_ES_R_Stage__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_ES_P_L__c</field>
            <operation>includes</operation>
            <value>MCS</value>
        </filters>
        <label>MCS Links</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PS_Links</fullName>
        <columns>GE_ES_Tool__c</columns>
        <columns>GE_ES_Link__c</columns>
        <columns>GE_ES_Description__c</columns>
        <columns>GE_ES_P_L__c</columns>
        <columns>GE_ES_R_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_ES_P_L__c</field>
            <operation>includes</operation>
            <value>PS</value>
        </filters>
        <label>PS Links</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>R1_Stage</fullName>
        <columns>GE_ES_Tool__c</columns>
        <columns>GE_ES_Link__c</columns>
        <columns>GE_ES_Description__c</columns>
        <columns>GE_ES_P_L__c</columns>
        <columns>GE_ES_R_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_ES_R_Stage__c</field>
            <operation>includes</operation>
            <value>R1</value>
        </filters>
        <label>R1 Stage</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TM_AE_Links</fullName>
        <columns>GE_OG_TM_Step__c</columns>
        <columns>GE_ES_Link__c</columns>
        <columns>GE_ES_Description__c</columns>
        <columns>GE_OG_TM_Usr_prfl__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_OG_TM_Usr_prfl__c</field>
            <operation>includes</operation>
            <value>AE</value>
        </filters>
        <label>TM AE Links</label>
    </listViews>
    <listViews>
        <fullName>TM_ComOps_Links</fullName>
        <columns>GE_OG_TM_Step__c</columns>
        <columns>GE_ES_Link__c</columns>
        <columns>GE_ES_Description__c</columns>
        <columns>GE_OG_TM_Usr_prfl__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_OG_TM_Usr_prfl__c</field>
            <operation>includes</operation>
            <value>ComOps</value>
        </filters>
        <label>TM ComOps Links</label>
    </listViews>
    <listViews>
        <fullName>TM_Sales_Links</fullName>
        <columns>GE_OG_TM_Step__c</columns>
        <columns>GE_ES_Link__c</columns>
        <columns>GE_ES_Description__c</columns>
        <columns>GE_OG_TM_Usr_prfl__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_OG_TM_Usr_prfl__c</field>
            <operation>includes</operation>
            <value>Sales</value>
        </filters>
        <label>TM Sales Links</label>
    </listViews>
    <nameField>
        <displayFormat>L{000000000}</displayFormat>
        <label>Links Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Links</pluralLabel>
    <recordTypes>
        <fullName>GE_PW_Wind_Services_Links</fullName>
        <active>true</active>
        <label>GE PW Wind Services Links</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>